--- a/render.yaml
+++ b/render.yaml
@@ -5,39 +5,10 @@ services:
     region: oregon
     plan: starter
     buildCommand: "./build.sh"
-    startCommand: "daphne backend.asgi:application --port $PORT --bind 0.0.0.0 --verbosity 2"
+    startCommand: "gunicorn backend.wsgi_socketio:application --bind 0.0.0.0:$PORT --worker-class eventlet --workers 1"
     healthCheckPath: "/ping/"
     envVars:
       - key: PYTHON_VERSION
         value: 3.12
       - key: WEB_CONCURRENCY
         value: 4
-      # Add your sensitive environment variables manually in Render Dashboard
-      # Go to: Service Settings → Environment → Add Environment Variable
-      # 
-      # Required variables:
-      # SECRET_KEY=your-secret-key
-      # DEBUG=False  
-      # DB_CONN_URL=your-database-url
-      # REDIS_URL=your-redis-url
-      # CLOUDINARY_CLOUD_NAME=your-cloudinary-name
-      # CLOUDINARY_API_KEY=your-cloudinary-key
-      # CLOUDINARY_API_SECRET=your-cloudinary-secret
-      # SENDGRID_API_KEY=your-sendgrid-key
-      # SENDGRID_FROM_EMAIL=your-email
-      # SENDGRID_FROM_NAME=your-name
-      # ALLOWED_HOSTS=localhost,127.0.0.1,vauice-backend.onrender.com
-
-# Optional: Redis service for WebSocket scaling
-# services:
-#   - type: redis
-#     name: vauice-redis
-#     region: oregon
-#     plan: starter
-#     maxmemoryPolicy: allkeys-lru
-
-# Optional: PostgreSQL database
-# databases:
-#   - name: vauice-db
-#     region: oregon
-#     plan: starter
