--- a/requirements.txt
+++ b/requirements.txt
@@ -45,5 +45,8 @@ cryptography==41.0.0
 redis==5.0.1
 django-ratelimit==3.0.1
 django-redis==5.2.0
+python-socketio==5.9.0
+eventlet==0.34.3
+gunicorn==21.2.0
 daphne==4.0.0
 uvicorn==0.27.0
