--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: starter
     buildCommand: "./build.sh"
-    startCommand: "gunicorn backend.wsgi_socketio:application --bind 0.0.0.0:$PORT --worker-class eventlet --workers 1"
+    startCommand: "gunicorn backend.wsgi_socketio:application --bind 0.0.0.0:$PORT --worker-class gevent --workers 1"
     healthCheckPath: "/ping/"
     envVars:
       - key: PYTHON_VERSION
