--- a/requirements.txt
+++ b/requirements.txt
@@ -39,14 +39,7 @@ tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
-channels==4.0.0
-channels-redis==4.1.0
-cryptography==41.0.0
-redis==5.0.1
 django-ratelimit==3.0.1
-django-redis==5.2.0
 python-socketio==5.9.0
-eventlet==0.34.3
+gevent==24.2.1
 gunicorn==21.2.0
-daphne==4.0.0
-uvicorn==0.27.0
